added more css for selection

--- a/search-filter/src/App.scss
+++ b/search-filter/src/App.scss
@@ -38,6 +38,11 @@
       color: grey;
       border-bottom: 1px dotted #CCD1D1;
     }
+    .search-result:hover{
+      cursor: pointer;
+      background-color: gray;
+      color: black;
+    }
   }
   
 }
