--- a/basic-registration-form/src/App.scss
+++ b/basic-registration-form/src/App.scss
@@ -4,17 +4,18 @@
   display: flex;
   justify-content: center; 
   padding-top: 50px;
+  background-color: #2ECC71;
 
   .form-container {
     display: flex;
     flex-direction: column;
-    width: 500px;
+    width: 300px;
     height: fit-content;
-    background-color: #2ECC71;
+    background-color: #ffffff;
     padding: 20px 40px;
     .form-field {
       margin-top: 20px;
-      padding: 10px;
+      padding: 15px;
       border: 1px solid grey;
       background-color: #F0F3F4;
       border-radius: 5px;
