--- a/react-navbar/src/App.scss
+++ b/react-navbar/src/App.scss
@@ -36,6 +36,9 @@
       align-items: center;
       margin-right: 50px;
 
+      .menu-item-icon {
+        display: none;
+      }
       .menu-item {
         margin: 10px;
         padding: 5px;
@@ -58,6 +61,45 @@
         cursor: pointer;
         opacity: 0.7;
       }
+    }
+  }
+
+  @media screen and (max-width: 960px) {
+    .nav-container {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+
+      .right-manu-container {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: flex-end;
+
+        .menu-item {
+          display: flex;
+          width: 100px;
+        }
+        .menu-item-icon {
+          display: flex;
+          justify-content: flex-end;
+          width: 100px;
+          text-align: right;
+        }
+        .menu-img {
+          height: 20px;
+          width: 20px;
+        }
+      }
+      .pad {
+        padding-top: 130px;
+      }
+    }
+    .height-320 {
+      height: 320px;
+    }
+    .hide-menu {
+      display: none !important;
     }
   }
 }
